# Asai-Tokenizer

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
ailaysa/models/: asai-v1.model  asai-v1.vocab
ailaysa/tokenizer/: core.py  loader.py
